--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ h1,h2,h3,h4,h5,h6,p{
 }
 
 
-/* =================== Queality ======================*/
+/* =================== Quality ======================*/
 .ex-me{
   margin-top: 35px;
 }
